--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,3 @@
-<% include ./partials/header %>
-
+<%- include('./partials/header')  %>
 <h1>Hello and Welcome!</h1>
-
-<% include ./partials/footer %>
+<%- include('./partials/footer')  %>
